tests/fixtures/iptables_nat.txt
*nat
:PREROUTING ACCEPT [22882279:1646539180]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4448259:636631203]
:POSTROUTING ACCEPT [4448536:636645667]
:NETAVARK-018DE4B7D718F - [0:0]
:NETAVARK-1D8721804F16F - [0:0]
:NETAVARK-DN-018DE4B7D718F - [0:0]
:NETAVARK-DN-1D8721804F16F - [0:0]
:NETAVARK-DN-821F51A91267F - [0:0]
:NETAVARK-HOSTPORT-DNAT - [0:0]
:NETAVARK-HOSTPORT-MASQ - [0:0]
:NETAVARK-HOSTPORT-SETMARK - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j NETAVARK-HOSTPORT-DNAT
-A OUTPUT -m addrtype --dst-type LOCAL -j NETAVARK-HOSTPORT-DNAT
-A POSTROUTING -j NETAVARK-HOSTPORT-MASQ
-A POSTROUTING -s 10.88.0.0/16 -j NETAVARK-1D8721804F16F
-A POSTROUTING -s 10.89.1.0/24 -j NETAVARK-018DE4B7D718F
-A NETAVARK-018DE4B7D718F -d 10.89.1.0/24 -j ACCEPT
-A NETAVARK-018DE4B7D718F ! -d 224.0.0.0/4 -j MASQUERADE
-A NETAVARK-1D8721804F16F -d 10.88.0.0/16 -j ACCEPT
-A NETAVARK-1D8721804F16F ! -d 224.0.0.0/4 -j MASQUERADE
-A NETAVARK-DN-018DE4B7D718F -s 10.89.1.0/24 -d 127.0.0.1/32 -p tcp -m tcp --dport 7777 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-018DE4B7D718F -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -m tcp --dport 7777 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-018DE4B7D718F -d 127.0.0.1/32 -p tcp -m tcp --dport 7777 -j DNAT --to-destination 10.89.1.37:7777
-A NETAVARK-DN-018DE4B7D718F -s 10.89.1.0/24 -d 127.0.0.1/32 -p tcp -m tcp --dport 20381 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-018DE4B7D718F -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -m tcp --dport 20381 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-018DE4B7D718F -d 127.0.0.1/32 -p tcp -m tcp --dport 20381 -j DNAT --to-destination 10.89.1.37:20381
-A NETAVARK-DN-1D8721804F16F -s 10.88.0.0/16 -d 127.0.0.1/32 -p tcp -m tcp --dport 3000 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-1D8721804F16F -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -m tcp --dport 3000 -j NETAVARK-HOSTPORT-SETMARK
-A NETAVARK-DN-1D8721804F16F -d 127.0.0.1/32 -p tcp -m tcp --dport 3000 -j DNAT --to-destination 10.88.2.9:3000
-A NETAVARK-HOSTPORT-DNAT -p tcp -m tcp --dport 3000 -m comment --comment "dnat name: podman id: 22b5372f85930440296d780039f1e81c193e0cd7190b6f726f66eac02ff1713c" -j NETAVARK-DN-1D8721804F16F
-A NETAVARK-HOSTPORT-DNAT -p tcp -m tcp --dport 7777 -m comment --comment "dnat name: simplelogin-net id: 4c5c8f92240f7f6a74e5a86b5d3e001d98e514401131b6789cce83e62297a7f9" -j NETAVARK-DN-018DE4B7D718F
-A NETAVARK-HOSTPORT-DNAT -p tcp -m tcp --dport 20381 -m comment --comment "dnat name: simplelogin-net id: 4c5c8f92240f7f6a74e5a86b5d3e001d98e514401131b6789cce83e62297a7f9" -j NETAVARK-DN-018DE4B7D718F
-A NETAVARK-HOSTPORT-MASQ -m comment --comment "netavark portfw masq mark" -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A NETAVARK-HOSTPORT-SETMARK -j MARK --set-xmark 0x2000/0x2000
COMMIT
